fix: Fixed the issue, tested as well.
